--- a/src/bot_admin_service/.env.example
+++ b/src/bot_admin_service/.env.example
@@ -1,4 +1,4 @@
-STAGE=prod
+STAGE=dev
 APP_MODULE=bot_admin_service.main:app
 
 JWT_SECRET_KEY=supersecret
@@ -17,3 +17,10 @@ POSTGRESQL_MASTER_PORT=6432
 POSTGRESQL_USERNAME=admin
 POSTGRESQL_PASSWORD=admin
 POSTGRESQL_DATABASE=app
+
+BOT_OWNER_ID=
+BOT_TOKEN=
+WEBHOOK_URL=https://ff3d-109-252-176-45.ngrok-free.app
+
+REDIS_MASTER_HOST=redis
+REDIS_MASTER_PORT_NUMBER=6379
