--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ cython_debug/
 /src/kwork_parser_bot/kwork_parser_bot/kwork_parser_bot/.logs/
 !/deployment/.volumes/
 !/.env
+/src/bot_admin_frontend/node_modules/
