--- a/src/bot_admin_frontend/package.json
+++ b/src/bot_admin_frontend/package.json
@@ -9,19 +9,24 @@
     "genapi": "openapi-generator-cli generate -i http://localhost:8000/api/v1/openapi.json -g typescript-axios -o ./src/generated"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "openapi-typescript-codegen": "^0.24.0",
     "ra-data-simple-rest": "^4.9.2",
     "react": "^18.2.0",
     "react-admin": "^4.9.0",
-    "react-dom": "^18.2.0",
-    "openapi-typescript-codegen": "^0.24.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
     "@types/node": "^18.16.1",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
+    "axios": "^1.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.0",
-    "axios": "^1.4.0"
+    "vite": "^3.2.0"
   }
 }
