--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -2,6 +2,13 @@ version: '3.9'
 
 services:
 
+  bot_admin_service:
+    extends:
+      file: ../src/bot_admin_service/docker-compose.yml
+      service: bot_admin_service
+    env_file:
+      - ../.env
+
   redis:
     image: redis/redis-stack-server:latest
     ports:
@@ -20,7 +27,6 @@ services:
       interval: 1s
       timeout: 3s
       retries: 50
-
 
   postgresql:
     image: bitnami/postgresql:latest
