--- a/src/bot_admin_service/.env.example
+++ b/src/bot_admin_service/.env.example
@@ -20,7 +20,7 @@ POSTGRESQL_DATABASE=app
 
 BOT_OWNER_ID=
 BOT_TOKEN=
-WEBHOOK_URL=
+WEBHOOK_DOMAIN=
 
 REDIS_MASTER_HOST=redis
 REDIS_MASTER_PORT_NUMBER=6379
