--- a/src/bot_admin_service/docker-compose.yml
+++ b/src/bot_admin_service/docker-compose.yml
@@ -4,6 +4,7 @@ services:
 
   bot_admin_service:
     build: .
+    image: coolworldocker/bot_admin_service:latest
     env_file:
       - .env
     ports:
