--- a/src/bot_admin_frontend/package.json
+++ b/src/bot_admin_frontend/package.json
@@ -12,9 +12,11 @@
     "@material-ui/core": "^4.12.4",
     "openapi-typescript-codegen": "^0.24.0",
     "ra-data-simple-rest": "^4.9.2",
+    "ra-input-rich-text": "^4.11.4",
     "react": "^18.2.0",
     "react-admin": "^4.9.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query-devtools": "^2.6.3"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.1",
