--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -9,8 +9,11 @@ services:
     environment:
       - STAGE=prod
       - MAX_WORKERS=1
-    env_file:
-      - ../.env
+
+  bot_admin_frontend:
+    extends:
+      file: ../src/bot_admin_frontend/docker-compose.yml
+      service: bot_admin_frontend
 
   postgresql:
     image: bitnami/postgresql:latest
