--- a/src/bot_admin_service/.env.example
+++ b/src/bot_admin_service/.env.example
@@ -1,5 +1,18 @@
 STAGE=dev
 APP_MODULE=bot_admin_service.main:app
+VARIABLE_NAME=app
+
+WORKERS_PER_CORE=1
+#MAX_WORKERS=
+#WEB_CONCURRENCY=
+HOST=0.0.0.0
+PORT=80
+LOG_LEVEL=INFO
+#ACCESS_LOG=
+#ERROR_LOG=
+GRACEFUL_TIMEOUT=120
+TIMEOUT=120
+KEEP_ALIVE=5
 
 BOT_OWNER_ID=
 BOT_TOKEN=
