--- a/src/bot_admin_service/.env.example
+++ b/src/bot_admin_service/.env.example
@@ -1,3 +1,4 @@
+PROJECT_NAME=bot_admin_service
 STAGE=dev
 APP_MODULE=bot_admin_service.main:app
 VARIABLE_NAME=app
@@ -16,7 +17,9 @@ KEEP_ALIVE=5
 
 BOT_OWNER_ID=
 BOT_TOKEN=
-WEBHOOK_DOMAIN=
+
+# ngrok
+AUTH_TOKEN=
 
 JWT_SECRET_KEY=supersecret
 ACCESS_TOKEN_EXPIRE_MINUTES=120
