--- a/src/bot_admin_frontend/docker-compose.yml
+++ b/src/bot_admin_frontend/docker-compose.yml
@@ -5,8 +5,8 @@ services:
   bot_admin_frontend:
     build: .
     hostname: bot_admin_frontend
-    environment:
-      - ./.env
+    env_file:
+      - ./.env.prod
     ports:
-      - "3030"
+      - "3030:3030"
     restart: always
