--- a/src/bot_admin_frontend/package.json
+++ b/src/bot_admin_frontend/package.json
@@ -16,9 +16,7 @@
     "react": "^18.2.0",
     "react-admin": "^4.9.0",
     "react-dom": "^18.2.0",
-    "react-query-devtools": "^2.6.3"
-  },
-  "devDependencies": {
+    "react-query-devtools": "^2.6.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
@@ -28,6 +26,7 @@
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
   }
