--- a/src/bot_admin_frontend/Dockerfile
+++ b/src/bot_admin_frontend/Dockerfile
@@ -1,15 +1,22 @@
-FROM node:20-alpine
+FROM node:latest as build
 
 WORKDIR /app
 
-COPY package.json yarn.lock ./
+COPY package.json yarn.lock /app/
 
 RUN yarn install
 
-COPY . .
+COPY . /app/
 
-RUN yarn run build
+RUN yarn build
 
-EXPOSE 3030
 
-CMD ["yarn", "run", "dev", "--mode", "production"]
+FROM nginx:latest
+
+COPY --from=build /app/dist /usr/share/nginx/html
+
+COPY --from=build /app/nginx/default.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
