--- a/src/bot_admin_service/Dockerfile
+++ b/src/bot_admin_service/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update && apt-get upgrade -y && apt-get clean
 
 COPY bot_admin_service/requirements.txt /app/requirements.txt
 
-RUN pip install --no-cache-dir -r /app/requirements.txt -U
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
 COPY bot_admin_service /app
 
