--- a/src/bot_admin_service/bot_admin_service/requirements.txt
+++ b/src/bot_admin_service/bot_admin_service/requirements.txt
@@ -1,7 +1,7 @@
 aiogram==3.0.0b7
-fastapi[all]
-pydantic
-pydantic[email]
+fastapi[all]==0.98.0
+pydantic==1.10.8
+# pydantic[email]
 SQLAlchemy==2.0.17
 alembic
 uvicorn
@@ -24,6 +24,6 @@ faker
 pytest-asyncio
 pytest-cov
 pre-commit
-fastapi-mail
+fastapi-mail==1.3.1
 asgi-correlation-id
 stringcase
